--- a/ticketing-app/public/index.html
+++ b/ticketing-app/public/index.html
@@ -29,12 +29,27 @@
   <body>
     <div class="container">
         <nav class="navigation">
-            <ol>
-              <li>random1</li>
-              <li>random2</li>
-              <li><div class="g-signin2" data-onsuccess="onSignIn"></div></li>
-              <li><a href="#" onClick="signOut();">Sign out</a></li>
-            </ol>
+            <ul>
+              <li>
+                <svg version="1.1" width="32" height="32" viewBox="0 0 32 32">
+                  <path d="M32 19l-6-6v-9h-4v5l-6-6-16 16v1h4v10h10v-6h4v6h10v-10h4z"></path>
+                </svg>
+                <span>
+                  Home
+                </span>
+              </li>
+              <li>
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                  <title>pencil</title>
+                  <path d="M27 0c2.761 0 5 2.239 5 5 0 1.126-0.372 2.164-1 3l-2 2-7-7 2-2c0.836-0.628 1.874-1 3-1zM2 23l-2 9 9-2 18.5-18.5-7-7-18.5 18.5zM22.362 11.362l-14 14-1.724-1.724 14-14 1.724 1.724z"></path>
+                </svg>                    
+                <span>
+                  Create Ticket
+                </span>  
+              </li>
+              <li><div class="g-signin2" data-onsuccess="onSignIn"></div>Sign In</li>
+              <li><a href="#" onClick="signOut();">Sign out</a>Sign Out</li>
+            </ul>
         </nav>
         <div id="root">
  
