adds SignInForm and changes authentication method

--- a/ticketing-app/public/index.html
+++ b/ticketing-app/public/index.html
@@ -40,7 +40,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
     <script>
+      // Initialize Firebase
+    
+    </script>
+    <!-- <script>
         function signOut() {
           var auth2 = gapi.auth2.getAuthInstance();
           auth2.signOut().then(function () {
@@ -56,6 +63,6 @@
           console.log('Image URL: ' + profile.getImageUrl());
           console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
         }
-      </script>
+      </script> -->
   </body>
 </html>
