adds log in form

--- a/ticketing-app/public/index.html
+++ b/ticketing-app/public/index.html
@@ -44,8 +44,17 @@
     <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script>
     <script>
-      // Initialize Firebase
-    
+//       var config = {
+//   apiKey: "AIzaSyB-lp34a0Nzc_dfQdO60mCHzUUwD1zMzAE",
+//   authDomain: "trackeeper-ticketing-app.firebaseapp.com",
+//   databaseURL: "https://trackeeper-ticketing-app.firebaseio.com",
+//   projectId: "trackeeper-ticketing-app",
+//   storageBucket: "trackeeper-ticketing-app.appspot.com",
+//   messagingSenderId: "200313618890"
+// };
+
+// firebase.initializeApp(config);
+// console.log('script executed')
     </script>
     <!-- <script>
         function signOut() {
